examples/lab3/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "eks-alb-testing-deployment"
spec:
  selector:
    matchLabels:
      app: "eks-alb-testing-web"
  replicas: 1
  template:
    metadata:
      labels:
        app: "eks-alb-testing-web"
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: "eks-alb-testing-web-nginx"
        ports:
        - containerPort: 80
