examples/lab3/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "eks-alb-testing-web-service"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "eks-alb-testing-web"
