examples/lab3/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "eks-alb-testing-web-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: bttrm-eks-dev-0-web
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "eks-alb-testing-web-service"
              servicePort: 80
